# CryptoMal

./: Cargo.toml  README.md  plain.txt
.cargo/: config.toml
scripts/: test.ps1
src/: build.rs  cryptor.rs  gcm.rs  generator.rs  lib.rs  main.rs  remote_crypto.rs  validate.rs
src/hash/: mod.rs  sha256.rs  sha3.rs
src/herpaderping/: decoy.rs  job.rs  mod.rs
src/kdf/: hkdf.rs  mod.rs  pbkdf2.rs
src/key_manager/: generator.rs  keygen.rs  mod.rs  verifier.rs
src/mac/: hmac.rs
src/process_hollowing/: job.rs
tests/: aes_vectors_integration.rs  cryptor_integration.rs  gcm_integration.rs  hash_integration.rs  high_load_integration.rs  tests.rs
