[package]
name = "CryptoMal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aes = "0.8"
tempfile = "3.21.0"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9.2"
cipher = "0.4.4"
ctr = "0.9"
cfb-mode = "0.8"
ofb = "0.6"
hex = "0.4.3"
sha2 = "0.10.9"