[package]
name = "CryptoMal"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "reverse_shell"
path = "src/remote_crypto.rs"

[[bin]]
name = "decoy"
path = "src/herpaderping/decoy.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aes = "0.8"
tempfile = "3.21.0"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9.2"
cipher = "0.4.4"
ctr = "0.9"
cfb-mode = "0.8"
ofb = "0.6"
hex = "0.4.3"
sha2 = "0.10.9"
winapi = { version = "0.3.9", features = [
    "minwindef",
    "winbase",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "winnt",
    "handleapi",
    "winuser",
    "ntdef",
    "libloaderapi",
    "synchapi",
    "tlhelp32",
    "psapi",
    "consoleapi",
    "fileapi",
    "securitybaseapi",
    "basetsd",
    "winerror"
]}
ntapi = "0.4.1"

[build-dependencies]
dotenv-build = "0.1"